--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SampleMarket - Premium Sample Packs for Producers</title>
+    <title>NoiseCrate - Premium Sample Packs for Producers</title>
     <meta name="description" content="Browse and buy high-quality sample packs for music production" />
-    <meta name="author" content="SampleMarket" />
+    <meta name="author" content="NoiseCrate" />
 
-    <meta property="og:title" content="SampleMarket - Premium Sample Packs" />
+    <meta property="og:title" content="NoiseCrate - Premium Sample Packs" />
     <meta property="og:description" content="Browse and buy high-quality sample packs for music production" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
